change width in impossible solo id to max-width, to prevent white space when resizing home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,7 +219,7 @@ label {
     color: #5C5C5A;
     font-size: 150%;
     margin: 79px 0 0 0;
-    width: 800px;
+    max-width: 800px;
     margin-left: calc((100% - 625px) / 2);
 }
 
